[package]
name = "lancer-time-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"]  }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sled = "0.34"
sys-info = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.7.0"
uuid = { version = "1.2.1", features = ["v4"] }